--- a/script/vsts/pull-requests.yml
+++ b/script/vsts/pull-requests.yml
@@ -14,6 +14,6 @@ jobs:
       name: Version
 
   # Import OS-specific build definitions
-  # - template: platforms/windows.yml
-  # - template: platforms/macos.yml
+  - template: platforms/windows.yml
+  - template: platforms/macos.yml
   - template: platforms/linux.yml
